Updated index file.

--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@ $(document).ready(function () {
 </div>
 
 
-<p>My name is Frances Williams, and I am a second year MPH student in Epidemiology at Columbia University Mailman School of Public Health. I have experience in research and program evaluation, and am passionate about using data to improve public health programming while advocating for social justice and health equity. I am particularly interested in reproductive health, domestic violence prevention, and criminal justice reform!</p>
+<p>My name is Frances Williams, and I am a second year MPH student in Epidemiology at Columbia University Mailman School of Public Health. I have experience in research and program evaluation, and am passionate about using data to improve public health programming while advocating for social justice and health equity. I am particularly interested in reproductive health, domestic violence prevention, and criminal justice reform.</p>
 <p>Outside of work and school, I watch lots of NPR Tiny Desk Concerts, tinker with film photography, crush crossword puzzles (through Wednesday, anyway), and occasionally play keyboard in my dad’s band - <a href="http://www.integralsoft.com/bboys/music/Here%20Comes%20The%20Sun.mp3">take a listen!</a></p>
 
 
