Final commit maybe? Dealing with website issues.

--- a/Resume.html
+++ b/Resume.html
@@ -280,6 +280,9 @@ $(document).ready(function () {
   <a href="Resume.html">Resume/CV</a>
 </li>
 <li>
+  <a href="Plots.html">Dashboard</a>
+</li>
+<li>
   <a href="mailto:&lt;frances.williams@columbia.edu&gt;">
     <span class="fa fa-envelope fa-lg"></span>
      
